2008-09-23 Marc Noirot <marc.noirot@gmail.com>
	* flv.h, flv.c (flv_get_timestamp, flv_tag_set_timestamp): Added
	  the flv_get_timestamp macro and the flv_tag_set_timestamp function
	  to add support of 32-bit extended timestamps.

	* flvmeta.c, flvdump.c: Added support of 32-bit extended timestamps.

	* flv.h, flvdump.c: Added supports for all the audio and video types
	  found in the official specification.

	* Makefile.am: Added compilation of flv.c.

	* types.c (uint32_to_uint24_be): Big-endian platforms fix.

	* types.h: Various fixes.

2008-05-28 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.6 Release.

	* amf.h, amf.c (amf_str): amf_str was transformed from a macro into
	  a function for better sanity checks.

	* amf.c (amf_string_read): Avoided allocating an empty buffer for
	  zero-length strings.

	* amf.c (amf_string_new): Avoided copying null strings into newly-created
	  AMF strings.

	* amf.c (amf_data_dump): Fixed a bug where zero-length strings would
	  cause fprintf to segfault flvdump in Linux.

2008-04-02 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.5 Release.

2008-03-24 Marc Noirot <marc.noirot@gmail.com>
	* amf.h, amf.c: Added support for the AMF NULL value type.

	* flvmeta.c (compute_vp6_size, compute_vp6_alpha_size): Fixed
	  a video size computation bug for the VP60 profile, reported
	  by zouguangxian@gmail.com.

2008-02-17 Marc Noirot <marc.noirot@gmail.com>
	* amf.c, amf.h, flvmeta.c, flvdump.c: Cleaned up the AMF
	  serializer/deserializer by using a callback-based mechanism to make
	  the code backend-independant (backported from the trunk).

2008-01-04 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.4 Release.
	
	* flvmeta.c (get_flv_info, write_flv): Data tags occuring before the first
	  audio or video tag were not written into the output file.
	
	* all source files: Fixed copyright strings.

2008-01-03 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (compute_metadata): Fixed a date bug where the